fixed: overflow of sections

--- a/wall/res/static/remote.css
+++ b/wall/res/static/remote.css
@@ -60,6 +60,10 @@ p.buttons > button:first-child {
     border-left: none;
 }
 
+section {
+    overflow: visible;
+}
+
 /* ==== Form ==== */
 
 form {
